--- a/EventDelegation/index.html
+++ b/EventDelegation/index.html
@@ -11,6 +11,7 @@
 
   <div id="calculator">
     <h1>Calculator using Event Delegation</h1>
+    <p> See <a href="https://github.com/abhinandanmishra1/javascript-concepts/tree/main/EventDelegation">Code</a> to understand concept.</p>
     <h3>Result: <span id="result"></span></h3>
     <div>
       <input type="number" placeholder="Enter Number" name="" id="num1">
